refactor: adjust style.css file formatting according to rule 3.5

--- a/style.css
+++ b/style.css
@@ -19,7 +19,9 @@
 
 @media (max-width:768px) {
 
-.header__wrapper { text-align: center; }
+  .header__wrapper {
+    text-align: center;
+  }
 
 }
 .content {
